# movie-explorer

./: .gitignore  Cargo.toml
src/: main.rs
src/db/: edges.rs  mod.rs  movies.rs  people.rs
src/scraper/: mod.rs
src/tmdb/: mod.rs
