[package]
name = "movie-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.9", features = ["json"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
