[package]
name = "movie-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full", "tracing"] }
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest = { version = "0.12.9", features = ["json"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
serde_json = "1.0.134"
console-subscriber = { version = "0.4.1", features = ["env-filter"] }
